--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <h1>Enter Your Mobile Number</h1>
   <form>
-    <input id="phone" class="form-control" name="phone" type="tel"><button onclick="document.getElementById('phone').value = ''">x</button><br>
+    <input id="phone" class="form-control" required="required" pattern="[789][0-9]{9}" name="phone" type="tel"><button onclick="document.getElementById('phone').value = ''">x</button><br>
     <button class="btn btn-primary" type="button">Get OTP</button>
   </form>
 
