--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h1>Enter Your Mobile Number</h1>
   <form>
     <input id="phone" class="form-control" required="required" pattern="[789][0-9]{9}" name="phone" type="tel"><button onclick="document.getElementById('phone').value = ''">x</button><br>
-    <button class="btn btn-primary" type="button">Get OTP</button>
+    <button class="btn btn-primary" type="submit">Get OTP</button>
   </form>
 
   <script src="build/js/intlTelInput.js"></script>
