--- a/index.html
+++ b/index.html
@@ -7,21 +7,38 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="build/css/intlTelInput.css">
   <link rel="stylesheet" href="build/css/demo.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.7/chosen.jquery.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.8.7/chosen.min.css">
+  <style>
+  input[isPassword="true"] {
+      -webkit-text-security: disc;
+  }
+  </style>
 </head>
 
 <body>
   <h1>Enter Your Mobile Number</h1>
-  <form>
-    <input id="phone" class="form-control" required="required" pattern="[789][0-9]{9}" name="phone" type="tel"><button onclick="document.getElementById('phone').value = ''">x</button><br>
-    <button class="btn btn-primary" type="submit">Get OTP</button>
-  </form>
 
+  <div class="search-wrapper">
+       <form>
+
+    <input id="phone" class="form-control search-box" name="phone" type="search">
+    <!-- <button type="reset"></button><br> -->
+    <button class="btn btn-primary" type="button">Get OTP</button>
+  </form>
+</div>
   <script src="build/js/intlTelInput.js"></script>
   <script>
     var input = document.querySelector("#phone");
     window.intlTelInput(input, {
       utilsScript: "build/js/utils.js",
     });
+  </script>
+  <!-- <script type="text/javascript" src="build/js/search.js"> -->
+
   </script>
 </body>
 
